      static network configuration, you probably need to be asked this.
  * Joshua Kwan
    - Rip out mii-diag support. Incidentally, this closes the 'Go Back'
      bugs regarding a template that now no longer exists.
      (Closes: #269081, #269236)
    - Code consolidation - don't replicate the code that writes resolv.conf
      twice.

 -- Joshua Kwan <joshk@triplehelix.org>  Tue, 31 Aug 2004 21:52:12 -0700

netcfg (1.01) unstable; urgency=medium

  * Joey Hess
    - Ignore failure from ip in dhclient-script when setting mtu, in case
      the supplied mtu is invalid.
  * Joshua Kwan
    - Give the user a choice to leave the network unconfigured if nothing is
      plugged in. (Closes: #264476)
    - netcfg-dhcp.templates: "may work" becomes "may succeed".
      (Closes: #261471)
    - Remove completely braindamaged pointer handling in
      seed_hostname_from_dns, caused by myself.
      (Closes: #261460, #261527, #263187, #265651, #266245, #266549)
    - Don't let a positive result from mii-diag override netcfg/disable_dhcp.
      (Closes: #266641)
  * Updated translations:
    - Arabic (ar.po) by Christian Perrier
    - Catalan (ca.po) by Jordi Mallach
    - Czech (cs.po) by Miroslav Kure
    - Danish (da.po) by Claus Hindsgaul
    - Greek (el.po) by Greek Translation Team
    - Basque (eu.po) by Piarres Beobide Egaña
    - Finnish (fi.po) by Tapio Lehtonen
    - French (fr.po) by French Team
    - Hebrew (he.po) by Lior Kaplan
    - Hungarian (hu.po) by VERÓK István
    - Japanese (ja.po) by Kenshi Muto
    - Korean (ko.po) by Changwoo Ryu
    - Lithuanian (lt.po) by Kęstutis Biliūnas
    - Dutch (nl.po) by Bart Cornelis
    - Portuguese (Brazil) (pt_BR.po) by André Luís Lopes
    - Portuguese (pt.po) by Miguel Figueiredo
    - Romanian (ro.po) by Eddy Petrisor
    - Russian (ru.po) by Christian Perrier
    - Slovak (sk.po) by Peter KLFMANiK Mann
    - Swedish (sv.po) by Per Olofsson
    - Turkish (tr.po) by Recai Oktaş