@@ -9,6 +9,11 @@ netcfg (1.02) UNRELEASED; urgency=low
       (Closes: #269081, #269236)
     - Code consolidation - don't replicate the code that writes resolv.conf
       twice.
+  * Thomas Hood
+    - Change function of backup button from netcfg/dhcp_options so that
+      instead of causing an exit from netcfg it backs up to the
+      choose-interface question (if there is more than one interface)
+      (Closes: #269081)
 
  -- Joshua Kwan <joshk@triplehelix.org>  Tue, 31 Aug 2004 21:52:12 -0700
 
